cluster/apps/focalboard/focalboard.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: focalboard-deployment
  namespace: focalboard
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: focalboard
  template:
    metadata:
      labels:
        app: focalboard
    spec:
      containers:
        - name: focalboard
          image: mattermost/focalboard:7.11.3@sha256:ff99720fd4735e8abaa2c7bf26b8b3c448f55b1014f9440358dc7b1452488583
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: config
              mountPath: /opt/focalboard/config.json
              subPath: config.json
              readOnly: true
            - name: data
              mountPath: /data
      volumes:
        - name: config
          configMap:
            name: focalboard-config-map
        - name: data
          persistentVolumeClaim:
            claimName: focalboard-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: focalboard-service
  namespace: focalboard
spec:
  type: ClusterIP
  ports:
    - name: http
      targetPort: 8000
      port: 8000
      protocol: TCP
  selector:
    app: focalboard
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: focalboard-ingress
  namespace: focalboard
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    cert-manager.io/private-key-algorithm: RSA
    cert-manager.io/private-key-size: 4096
    cert-manager.io/private-key-rotation-policy: Always
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: focalboard.${SECRET_INTERNAL_DOMAIN_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: focalboard-service
                port:
                  number: 8000
  tls:
    - hosts:
        - focalboard.${SECRET_INTERNAL_DOMAIN_NAME}
      secretName: focalboard-tls
